# wendy.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt  Makefile  README.md  example.cpp  example.sh  example_goodwin.cpp  example_goodwin_2d.cpp  example_goodwin_3d.cpp  example_logistic.cpp  example_lorenz.cpp  external.sh
example/: CMakeLists.txt  example_goodwin_2d.cpp  example_goodwin_3d.cpp  example_hindmarsh_rose.cpp  example_logistic.cpp  example_lorenz.cpp
include/wendy/: weak_residual.h  weak_residual_covariance.h  wendy.h  wnll.h
src/: Makefile  ceres.h  ceres_cost.h  fft.cpp  fft.h  ipopt.h  logger.cpp  logger.h  noise.cpp  noise.h  symbolic_utils.cpp  symbolic_utils.h  test_function.cpp  test_function.h  utils.cpp  utils.h  weak_residual.cpp  weak_residual.h  weak_residual_covariance.cpp  weak_residual_covariance.h  wendy.cpp  wendy.h  wnll.cpp  wnll.h
src/cost/: wnll.cpp  wnll.h
src/objective/: mle.cpp  mle.h
src/optimization/: ceres.h  cpp_numerical.h  ipopt.h
src/optimizers/: mle.cpp  mle.h  weak_residual.cpp  weak_residual.h  weak_residual_covariance.cpp  weak_residual_covariance.h  weak_residual_equations.cpp  weak_residual_equations.h
test/: CMakeLists.txt  doctest.h  test_mle.cpp  test_symbolic_utils.cpp  test_test_functions.cpp  test_utils.cpp  test_weak_residual.cpp  test_weak_residual_covariance.cpp
